--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,14 @@ nav ul li a.active {
     text-align: left; /* Align to the left */
 }
 
+
+#my work h2 {
+    font-size: 3em; /* Make the heading bigger */
+    color: #343a40;
+    margin-bottom: 20px; /* Reduced bottom margin */
+    text-align: left; /* Align to the left */
+}
+
 #about h2 {
     font-size: 3em; /* Make the heading bigger */
     color: #343a40;
