--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ nav ul li a.active {
 }
 
 
-#my work h2 {
+#home h2 {
     font-size: 3em; /* Make the heading bigger */
     color: #343a40;
     margin-bottom: 20px; /* Reduced bottom margin */
