--- a/styles.css
+++ b/styles.css
@@ -190,9 +190,11 @@ nav ul li a.active {
 
 #about-my-work .image {
     width: 35%; /* Sets the image width to 35% */
-    max-width: 100%; /* Ensures the image doesn't exceed its container's width */
-    height: auto; /* Maintains the image's aspect ratio */
+    height: 100%; /* Makes sure the image height matches the text height */
+    object-fit: cover; /* Ensures the image covers the container without distorting */
+    max-width: 100%; /* Ensures the image doesn't exceed the container's width */
 }
+
 
 
 
